# coding-shell-extensions

./: .gitignore  Makefile.am  autogen.sh  configure.ac  extension.mk  include.mk  settings.mk
debian/: changelog  control  copyright
extensions/: Makefile.am
extensions/CoverflowAltTab@dmo60.de/: Makefile.am  extension.js  stylesheet.css
extensions/glassygnome@emiapwil/: Makefile.am  metadata.json
extensions/gradientbottombar@julienpecqueur.net/: Makefile.am  extension.js
extensions/gradientbottombar@julienpecqueur.net/schemas/: org.gnome.shell.extensions.gradientbottombar.gschema.xml
extensions/time_tracker_jsnjack@gmail.com/: Makefile.am  metadata.json
extensions/todolist@bsaleil.org/: Makefile.am  extension.js  utils.js
glassygnome@emiapwil/: extension.js
gradientbottombar@julienpecqueur.net/: metadata.json  stylesheet.css
time_tracker_jsnjack@gmail.com/: extension.js
todolist@bsaleil.org/: metadata.json
